// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should be allow some status  1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium is-disabled" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium is-shadow" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be render as a element 1`] = `
<button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
  <!---->
  <!---->
  <!---->Button
</button>
`;

exports[`Button should be support diferent types 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--success-default); --button-hover-color: var(--success-default);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--warning-default); --button-hover-color: var(--warning-default);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--error fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--error-default); --button-hover-color: var(--error-default);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support different sizes 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--mini " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--small " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--large " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium is-auto" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support icon 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" icon="github">
    <!---->
    <!---->
    <div class="fect-button__icon"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" viewBox="0 0 24 24">
        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"></path>
      </svg></div> Button
  </button></div>
`;

exports[`Button should be support loadType and loadColor follow button color 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__default default medium"></i><i class="loading__default default medium"></i><i class="loading__default default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--success-default); --button-hover-color: var(--success-default);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--warning-default); --button-hover-color: var(--warning-default);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button></div>
`;
